--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.575.0",
     "next": "14.2.35",
+    "openai": "^6.22.0",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^3.7.0",
